<resources>
    <string name="app_name">My Application_SpongeBob</string>
    <string name="your_name">YOUR NAME</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="e_mail_address">E-MAIL ADDRESS</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="type_name">이름을 입력해주세요.</string>
    <string name="type_password">비밀번호를 입력해주세요.</string>
    <string name="type_number">휴대폰 번호를 입력해주세요.</string>
    <string name="type_email">이메일을 입력해주세요.</string>
    <string name="name_format"> %s </string>
    <string name="email_format"> %s </string>
    <string name="phone_format"> %s </string>
</resources>